--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-components",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://rolling-scopes-school.github.io/ol4ik88-REACT2022Q3/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -50,9 +53,10 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.8",
+    "gh-pages": "^4.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",    
+    "prettier": "^2.7.1",
     "sass": "^1.55.0"
   }
 }
